Fix about_page horizontal overflow

--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -32,6 +32,9 @@ body {
 .med-spacer {
   height: 40px;
 }
+.half-spacer-div {
+  height: 30px;
+}
 h1 {
   font-family: "Kalnia", serif;
   font-weight: 700;
@@ -1168,8 +1171,7 @@ h3 {
   color: var(--greenish-blue);
 }
 .about-container {
-  height: 100%;
-  width: 100vw;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1714,7 +1716,7 @@ footer a:hover {
     align-items: center;
   }
   .book-info {
-    width: 200px;
+    width: 90%;
   }
   .book-buttons {
     width: 100%;
